<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".task2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/loginlayout"
        >


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login Page"
            android:gravity="center"
            android:textSize="32sp"
            android:fontFamily="@font/karla"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="18dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginBottom="24dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:textSize="24sp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                android:hint="@string/namehint"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="10dp"

                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_person" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailid"
            android:textSize="24sp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                android:hint="@string/emailhint"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="10dp"

                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_email" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:id="@+id/password"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                android:drawablePadding="10dp"
                android:hint="@string/passwordhint"
                android:padding="10dp"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_password"
                android:drawableLeft="@drawable/ic_password" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_margin="16dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:id="@+id/loginbutton"
            android:text="@string/loginbuttontext"
            />


    </LinearLayout>
</ScrollView>

